@@ -54,9 +54,8 @@ extern "C" {
    should not be used by a program because gcry_check_version() should
    return the same version.  The purpose of this macro is to let
    autoconf (using the AM_PATH_GCRYPT macro) check that this header
-   matches the installed library.  Note: Do not edit the next line as
-   configure may fix the string here.  */
-#define GCRYPT_VERSION "1.3.0-cvs"
+   matches the installed library.  */
+#define GCRYPT_VERSION "@VERSION@"
 
 /* Internal: We can't use the convenience macros for the multi
    precision integer functions when building this library. */
