@@ -1,3 +1,7 @@
+2006-10-11  Marcus Brinkmann  <marcus@g10code.de>
+
+	* gcrypt.h.in: Replace version by @VERSION@.
+
 2006-10-10  Marcus Brinkmann  <marcus@g10code.de>
 
 	* gcrypt.h: Add fallback type for socklen_t.  Move to ...
